--- a/trunk/WebRoot/cust_radio_buttons/index.htm
+++ b/trunk/WebRoot/cust_radio_buttons/index.htm
@@ -7,8 +7,8 @@
 <!-- custom select plugin js -->
 <script type="text/javascript" src='cust_checkbox_plugin.js'></script>
 
-<link rel="stylesheet" type="text/css" href="generalstyle.css">
-<link rel="stylesheet" type="text/css" href="checkbox_style.css">
+<link rel="stylesheet" type="text/css" href="../generalstyle.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 <title>Plug-in</title>
 <script>
 $(document).ready( function() {
