--- a/trunk/WebRoot/cust_selectbox_plugin/index.htm
+++ b/trunk/WebRoot/cust_selectbox_plugin/index.htm
@@ -13,7 +13,7 @@
 		<!-- custom select plugin js -->
 		<script type="text/javascript" src='cust_select_plugin.js'></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="stylesheet" type="text/css" href="generalstyle.css">
+		<link rel="stylesheet" type="text/css" href="../generalstyle.css">
 		<!--[if IE]>
 			<link rel="stylesheet" type="text/css" href="ie_style.css" >
 		<![endif]-->
