--- a/WebRoot/cust_radio_buttons/index.htm
+++ b/WebRoot/cust_radio_buttons/index.htm
@@ -20,7 +20,7 @@ $(document).ready( function() {
 <div id="page_wrapper">
 <h2>jQuery Custom Check Box and Radio Buttons
 	<div>By: Darren Mason</div>
-	<div><a href="#">Download Here</a></div>
+	<div><a href="http://plugins.jquery.com/project/custom_radio_buttons">Download Here</a></div>
 	<div><a href="http://mypocket-technologies.com/jquery/SelectBoxPlugin/">Other Plugins</a></div>
 	</h2>
 	<label class="lbl_header">HTML EXAMPLE</label>
