--- a/trunk/WebRoot/cust_radio_buttons/index.htm
+++ b/trunk/WebRoot/cust_radio_buttons/index.htm
@@ -54,7 +54,7 @@ $("input[type='checkbox']").custCheckBox();
 	</pre>
 	</code>
 </div>
-	<fieldset class="group">
+	<fieldset class="groupa">
 	<legend>Check Box Items:</legend>
 		<label for="1x">Label One:</label> <input type="checkbox" value="1x" name="checkboxone" id="1x" checked="checked"/>
 		<label for="2x">Label Two:</label> <input type="checkbox" value="1x" name="checkboxone" id="2x"/>
@@ -69,7 +69,7 @@ $("input[type='radio']").custCheckBox();
 	</pre>
 	</code>
 </div>
-	<fieldset class="group">
+	<fieldset class="groupa">
 	<legend>Radio Button Items:</legend>
 		<label for="4x">Label One:</label> <input type="radio" value="4x" name="radioone" id="4x"/>
 		<label for="5x">Label Two:</label> <input type="radio" value="5x" name="radioone" id="5x" checked="checked"/>
