--- a/WebRoot/cust_selectbox_plugin/index.htm
+++ b/WebRoot/cust_selectbox_plugin/index.htm
@@ -11,7 +11,7 @@
 
 		<script type="text/javascript" src='http://jqueryjs.googlecode.com/files/jquery-1.3.1.min.js'></script>
 		<!-- custom select plugin js -->
-		<script type="text/javascript" src='http://jquerycustomselectbox.googlecode.com/svn/trunk/WebRoot/cust_selectbox_plugin/cust_select_plugin.js'></script>
+		<script type="text/javascript" src='cust_select_plugin.js'></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="../generalstyle.css">
 		<!--[if IE]>
