--- a/WebRoot/cust_selectbox_plugin/index_2.0.htm
+++ b/WebRoot/cust_selectbox_plugin/index_2.0.htm
@@ -68,7 +68,7 @@
 	
 	<div class="select_wrap">
 	<label>Sample Selection</label>
-	<select name="sample_select" disabled="disabled">
+	<select name="sample_select">
 		<option value="1">Option One</option>
 		<option value="2">Option Two</option>
 		<option value="3" selected="selected">Option Three</option>
