--- a/WebRoot/cust_selectbox_plugin/index_2.0.htm
+++ b/WebRoot/cust_selectbox_plugin/index_2.0.htm
@@ -50,7 +50,7 @@
 	<label>Sample Selection Long Version</label>
 	<select name="sample_select">
 		<option value="1">Option One</option>
-		<option value="2" selected="selected">Option Two</option>
+		<option value="2">Option Two</option>
 		<option value="3">Option Three</option>
 		<option value="4">Option Four</option>
 	</select>
