--- a/WebRoot/cust_selectbox_plugin/index_2.0.htm
+++ b/WebRoot/cust_selectbox_plugin/index_2.0.htm
@@ -47,8 +47,8 @@
 	<p/>
 	
 	<div class="select_wrap">
-	<label>Sample Selection Long Version</label>
 	<select name="sample_select">
+		<option>Sample Selection Long Version</option>
 		<option value="1">Option One</option>
 		<option value="2">Option Two</option>
 		<option value="3">Option Three</option>
@@ -57,57 +57,31 @@
 	</div>
 	
 	<div class="select_wrap">
-	<label>Sample Selection</label>
 	<select name="sample_select" multiple="multiple" disabled="disabled">
+		<option>Sample Selection</option>
 		<option value="1">Option One</option>
 		<option value="2">Option Two</option>
-		<option value="3" selected="selected">Option Three</option>
+		<option value="1">Option One</option>
+		<option value="2">Option Two</option>
+		<option value="1">Option One</option>
+		<option value="2">Option Two</option>
+		<option value="1">Option One</option>
+<option value="3" selected="selected">Option Three</option>
+		<option value="2">Option Two</option>
+		<option value="1">Option One</option>
+		<option value="2">Option Two</option>
+		<option value="1">Option One</option>
+		<option value="2">Option Two</option>
+		<option value="1">Option One</option>
+		<option value="2">Option Two</option>
+		<option value="1">Option One</option>
+		<option value="2">Option Two</option>
+		<option value="1">Option One</option>
+		<option value="2">Option Two</option>
 		<option value="4">Option Four</option>
 	</select>
 	</div>
 	
-	<div class="select_wrap">
-	<label>Sample Selection</label>
-	<select name="sample_select">
-		<option value="1">Option One</option>
-		<option value="2">Option Two</option>
-		<option value="3" selected="selected">Option Three</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-		<option value="4">Option Four</option>
-	</select>
-	</div>
 	
 	</div>
 	</body>
