--- a/WebRoot/cust_selectbox_plugin/index_2.0.htm
+++ b/WebRoot/cust_selectbox_plugin/index_2.0.htm
@@ -22,6 +22,9 @@
 <script>
 	$(document).ready( function() {
 		$("select").custSelectBox();
+		/*$("#custom_multi").custSelectBox({
+			selectwidth:	150
+		});*/
 		
 	});
 </script>
@@ -57,6 +60,16 @@
 	</div>
 	
 	<div class="select_wrap">
+	<select name="sample_select" multiple="multiple" id="custom_multi">
+		<option>Sample Selection</option>
+		<option value="1">Option One</option>
+		<option value="2" selected="selected">Option Two</option>
+		<option value="3">Option Three</option>
+		<option value="4">Option Four</option>
+	</select>
+	</div>
+	
+	<div class="select_wrap">
 	<select name="sample_select" multiple="multiple" disabled="disabled">
 		<option>Sample Selection</option>
 		<option value="1">Option One</option>
@@ -66,7 +79,7 @@
 		<option value="1">Option One</option>
 		<option value="2">Option Two</option>
 		<option value="1">Option One</option>
-<option value="3" selected="selected">Option Three</option>
+		<option value="3" selected="selected">Option Three</option>
 		<option value="2">Option Two</option>
 		<option value="1">Option One</option>
 		<option value="2">Option Two</option>
