--- a/trunk/WebRoot/cust_selectbox_plugin/index.htm
+++ b/trunk/WebRoot/cust_selectbox_plugin/index.htm
@@ -22,8 +22,8 @@
 <script>
 	$(document).ready( function() {
 		
-		//$(".select_wrap").custSelectBox();
-		 
+		$(".select_wrap").custSelectBox();
+		/* 
 		//BASIC USE
 		$("#select_1").custSelectBox();
 		
@@ -42,7 +42,7 @@
 			isdisabled:		false,
 			selectwidth:	150,
 			});
-		
+		*/
 	});
 </script>
 	<body>
