--- a/WebRoot/cust_selectbox_plugin/index.htm
+++ b/WebRoot/cust_selectbox_plugin/index.htm
@@ -11,7 +11,7 @@
 
 		<script type="text/javascript" src='http://jqueryjs.googlecode.com/files/jquery-1.3.1.min.js'></script>
 		<!-- custom select plugin js -->
-		<script type="text/javascript" src='cust_select_plugin.js'></script>
+		<script type="text/javascript" src='cust_select_plugin_2.0.js'></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="../generalstyle.css">
 		<!--[if IE]>
@@ -21,28 +21,8 @@
 
 <script>
 	$(document).ready( function() {
+		$("select").custSelectBox();
 		
-		$(".select_wrap").custSelectBox();
-		/* 
-		//BASIC USE
-		$("#select_1").custSelectBox();
-		
-		//CHECKBOX USE
-		$("#select_2").custSelectBox({
-			boxtype:"selectboxoptions_check",
-			selectname:"select_2"
-			});
-		//ADVANCED USE 
-		$("#select_3").custSelectBox({
-			isscrolling: 	true,				//scrolls long lists
-			scrollminitems:	5,					//items before scrolling
-			scrollheight:	100,				//height of scrolling window
-			preopenselect:	false,				//opens prechecked select boxes
-			openspeed:		"slow",			//selectbox open speed "slow","normal","fast" or numbers 1000
-			isdisabled:		false,
-			selectwidth:	150,
-			});
-		*/
 	});
 </script>
 	<body>
@@ -55,169 +35,100 @@
 	<label class="lbl_header">HTML EXAMPLE</label>
 	<pre class="html">
 &#60;div class="select_wrap"&#62;
-     &#60;div class="selectbox"&#62;
-        &#60;ul&#62;
-          &#60;li&#62;
-            Sample Two Long
-          &#60;/li&#62;
-        &#60;/ul&#62;
-     &#60;/div&#62;
-     &#60;div class="selectboxoptions_wrap"&#62;
-        &#60;ul&#62;
-          &#60;li class="selected"&#62;
-            &#60;span class="elmValue"&#62;1&#60;/span&#62;
-            Item One
-          &#60;/li&#62;
-          &#60;li&#62;
-            &#60;span class="elmValue"&#62;2&#60;/span&#62;
-            Item Two
-          &#60;/li&#62;
-        &#60;/ul&#62;
-     &#60;/div&#62;
-&#60;/div&#62;
+	&#60;select name="sample_select"&#62;
+		&#60;option&#62;Sample Selection&#60;/option&#62;
+		&#60;option value="1"&#62;Option One&#60;/option&#62;
+		&#60;option value="2"&#62;Option Two&#60;/option&#62;
+		&#60;option value="3"&#62;Option Three&#60;/option&#62;
+		&#60;option value="4"&#62;Option Four&#60;/option&#62;
+	&#60;/select&#62;
+&#60;/div&#62;	
 	</pre>
 	
 	<label class="lbl_header">BASIC USAGE</label>
 	<div class="code">
 	<code>
-	<pre>
-<span  class="html">Applies to all boxes</span>
+<pre>
+<span class="html">Applies to all boxes</span>
 $(".select_wrap").custSelectBox();
-<span  class="html">Applies to single box</span>
-$("#select_1").custSelectBox();
-	</pre>
-	</code>
+<span class="html">
+&#60;div class="select_wrap"&#62;
+	&#60;select name="sample_select"&#62;
+		&#60;option&#62;Sample Selection&#60;/option&#62;
+		&#60;option value="1"&#62;Option One&#60;/option&#62;
+		&#60;option value="2"&#62;Option Two&#60;/option&#62;
+		&#60;option value="3"&#62;Option Three&#60;/option&#62;
+		&#60;option value="4"&#62;Option Four&#60;/option&#62;
+	&#60;/select&#62;
+&#60;/div&#62;
+</span>	
+</pre>
+</code>
+</div>
+	<div class="select_wrap">
+	<select name="sample_select">
+		<option>Sample Selection Long Version</option>
+		<option value="1">Option One</option>
+		<option value="2" selected="selected">Option Two</option>
+		<option value="3">Option Three</option>
+		<option value="4">Option Four</option>
+	</select>
 	</div>
-	<p/>
-	<div class="select_wrap" id="select_1">
-			<div class="selectbox">
-				<ul>
-					<li>
-						Sample One
-					</li>
-				</ul>
-			</div>
-			<div class="selectboxoptions_wrap">
-				<ul>
-					<li class="selected">
-					<span class="elmValue">1</span>
-						Item One
-					</li>
-					<li>
-					<span class="elmValue">2</span>
-						Item Two
-					</li>
-					<li>
-					<span class="elmValue">3</span>
-						Item Three
-					</li>
-					<li>
-					<span class="elmValue">4</span>
-						Item Four
-					</li>
-					<li>
-					<span class="elmValue">5</span>
-						Item Five
-					</li>					
-				</ul>
-			</div>
-		</div>
-		
-	<label class="lbl_header">CHECKBOX USAGE</label>
-	<div class="code">
+<label class="lbl_header">MULTI SELECT VERSION</label>
+<div class="code">
 	<code>
-	<pre>
-$("#select_2").custSelectBox({
-	boxtype:"selectboxoptions_check",
-	selectname:"select_2"
-});
-	</pre>
-	</code>
+<pre>
+<span class="html">
+&#60;div class="select_wrap"  multiple="multiple"&#62;
+	&#60;select name="sample_select"&#62;
+		&#60;option&#62;Sample Selection&#60;/option&#62;
+		&#60;option value="1"&#62;Option One&#60;/option&#62;
+		&#60;option value="2"&#62;Option Two&#60;/option&#62;
+		&#60;option value="3"&#62;Option Three&#60;/option&#62;
+		&#60;option value="4"&#62;Option Four&#60;/option&#62;
+	&#60;/select&#62;
+&#60;/div&#62;
+</span>	
+</pre>
+</code>
+</div>
+	<div class="select_wrap">
+	<select name="sample_select" multiple="multiple">
+		<option>Sample Selection</option>
+		<option value="1">Option One</option>
+		<option value="2" selected="selected">Option Two</option>
+		<option value="3">Option Three</option>
+		<option value="4">Option Four</option>
+	</select>
 	</div>
-	<p/>	
-		<div class="select_wrap" id="select_2">
-			<div class="selectbox">
-				<ul>
-					<li>
-						Sample Two Long
-					</li>
-				</ul>
-			</div>
-			<div class="selectboxoptions_wrap">
-				<ul>
-					<li class="selected">
-					<span class="elmValue">1</span>
-						Item One
-					</li>
-					<li>
-					<span class="elmValue">2</span>
-						Item Two
-					</li>
-					<li>
-					<span class="elmValue">3</span>
-						Item Three
-					</li>
-					<li>
-					<span class="elmValue">4</span>
-						Item Four
-					</li>
-					<li>
-					<span class="elmValue">5</span>
-						Item Five
-					</li>					
-				</ul>
-			</div>
-		</div>
-		<label class="lbl_header">ADVANCED USAGE</label>
-		<div class="code">
-		<code>
-		<pre>
-$("#select_3").custSelectBox({
-	isscrolling:		true,
-	scrollminitems:		5,	
-	scrollheight:		100,		
-	preopenselect:		false,		
-	openspeed:		"slow",		
-	isdisabled:		false,
-	selectwidth:		150
-});
-			</pre>
-	</code>
-	</div>
-	<p/>
-		<div class="select_wrap" id="select_3">
-			<div class="selectbox">
-				<ul>
-					<li>
-						Sample Three Scroll
-					</li>
-				</ul>
-			</div>
-			<div class="selectboxoptions_wrap">
-				<ul>
-					<li class="selected">
-					<span class="elmValue">1</span>
-						Item One
-					</li>
-					<li>
-					<span class="elmValue">2</span>
-						Item Two
-					</li>
-					<li>
-					<span class="elmValue">3</span>
-						Item Three
-					</li>
-					<li>
-					<span class="elmValue">4</span>
-						Item Four
-					</li>
-					<li>
-					<span class="elmValue">5</span>
-						Item Five
-					</li>					
-				</ul>
-			</div>
-		</div>
+<label class="lbl_header">DISABLED VERSION</label>
+<div class="code">
+	<code>
+<pre>
+<span class="html">
+&#60;div class="select_wrap" disabled="disabled"&#62;
+	&#60;select name="sample_select"&#62;
+		&#60;option&#62;Sample Selection&#60;/option&#62;
+		&#60;option value="1"&#62;Option One&#60;/option&#62;
+		&#60;option value="2"&#62;Option Two&#60;/option&#62;
+		&#60;option value="3"&#62;Option Three&#60;/option&#62;
+		&#60;option value="4"&#62;Option Four&#60;/option&#62;
+	&#60;/select&#62;
+&#60;/div&#62;	
+</span>
+</pre>
+</code>
+</div>
+	<div class="select_wrap">
+	<select name="sample_select" disabled="disabled">
+		<option>Sample Selection</option>
+		<option value="1">Option One</option>
+		<option value="2" selected="selected">Option Two</option>
+		<option value="3">Option Three</option>
+		<option value="4">Option Four</option>
+	</select>
+	</div>	
+	
 	</div>
 	</body>
 </html>
