--- a/trunk/WebRoot/cust_selectbox_plugin/index.htm
+++ b/trunk/WebRoot/cust_selectbox_plugin/index.htm
@@ -32,6 +32,23 @@
 	<div><a href="http://plugins.jquery.com/project/customselectbox">Download Here</a></div>
 	<div><a href="http://mypocket-technologies.com/jquery/cust_radio_buttons/">Other Plugins</a></div>
 	</h2>
+	<label class="lbl_header">OPTIONS</label>
+	<div class="code">
+	<code>
+	<pre class="html">
+@param isscrolling:	false,		//scrolls long lists
+@param scrollminitems:	15,		//items before scrolling
+@param scrollheight:	150,		//height of scrolling window
+@param preopenselect:	true,		//opens prechecked select boxes
+@param hoverstyle:	"hover",	//css hover style name
+@param openspeed:	"normal",	//open speed "slow","normal","fast" or numbers 1000
+@param alldisabled:	false,		//disables all the selectbox
+@param selectwidth:	"auto",		//set width of selectbox
+@param wrappername:	".select_wrap"	//class name of the wrapper tag
+	</pre>
+	</code>
+	</div>
+	
 	<label class="lbl_header">HTML EXAMPLE</label>
 	<pre class="html">
 &#60;div class="select_wrap"&#62;
