--- a/trunk/WebRoot/cust_selectbox_plugin/index.htm
+++ b/trunk/WebRoot/cust_selectbox_plugin/index.htm
@@ -73,7 +73,7 @@ $(".select_wrap").custSelectBox();
 	&#60;select name="sample_select"&#62;
 		&#60;option&#62;Sample Selection&#60;/option&#62;
 		&#60;option value="1"&#62;Option One&#60;/option&#62;
-		&#60;option value="2"&#62;Option Two&#60;/option&#62;
+		&#60;option value="2" selected="selected"&#62;Option Two&#60;/option&#62;
 		&#60;option value="3"&#62;Option Three&#60;/option&#62;
 		&#60;option value="4"&#62;Option Four&#60;/option&#62;
 	&#60;/select&#62;
@@ -100,7 +100,7 @@ $(".select_wrap").custSelectBox();
 	&#60;select name="sample_select"&#62;
 		&#60;option&#62;Sample Selection&#60;/option&#62;
 		&#60;option value="1"&#62;Option One&#60;/option&#62;
-		&#60;option value="2"&#62;Option Two&#60;/option&#62;
+		&#60;option value="2" selected="selected"&#62;Option Two&#60;/option&#62;
 		&#60;option value="3"&#62;Option Three&#60;/option&#62;
 		&#60;option value="4"&#62;Option Four&#60;/option&#62;
 	&#60;/select&#62;
@@ -127,7 +127,7 @@ $(".select_wrap").custSelectBox();
 	&#60;select name="sample_select"&#62;
 		&#60;option&#62;Sample Selection&#60;/option&#62;
 		&#60;option value="1"&#62;Option One&#60;/option&#62;
-		&#60;option value="2"&#62;Option Two&#60;/option&#62;
+		&#60;option value="2" selected="selected"&#62;Option Two&#60;/option&#62;
 		&#60;option value="3"&#62;Option Three&#60;/option&#62;
 		&#60;option value="4"&#62;Option Four&#60;/option&#62;
 	&#60;/select&#62;
